--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,13 @@ services:
   netdata:
     image: netdata/netdata:latest
     container_name: netdata
-    hostname: localhost  # example.com 
+    hostname: $(hostname) 
     ports:
       - "8200:19999"
     restart: unless-stopped
     cap_add:
       - SYS_PTRACE
+      - SYS_ADMIN
     security_opt:
       - apparmor:unconfined
     volumes:
@@ -20,6 +21,7 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /etc/os-release:/host/etc/os-release:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 
 volumes:
   netdataconfig:
